--- a/cv.html
+++ b/cv.html
@@ -8,57 +8,37 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Jumbotron -->
+    <!-- Header -->
     <section>
-      <div class="jumbotron">
-        <img class="profile" src="assett/ganda.jpg" alt="Photo" height="200px" />
-        <h1>Arlinno Ganda Saputra</h1>
-        <h3>
-          Fullstack Web Developer Student <br />
-          at SYNRGY Academy
-        </h3>
+      <div class="jumbotron" style="padding: 2rem">
+        <div class="row">
+          <div class="column" style="float: left; width: 20%; text-align: center">
+            <img src="assett/ganda.jpg" alt="Photo" height="200px" />
+          </div>
+          <div class="column" style="float: right; width: 80%">
+            <h1>Arlinno Ganda Saputra</h1>
+            <p>Final Year Student | Android & Fullstack Developer</p>
+            <a href="https://www.linkedin.com/in/gandasaputra/">Linkedin</a>
+            <a href="https://www.youtube.com/channel/UC1ev53MhIQNW_pp1bhw4w-A">Youtube</a> 
+            <h3>About Me</h3>
+            <p>
+                I'm a 7th-semester student majoring in Informatics Engineering who has a great passion for Android Development and User Interface. I may not have enough experience in programming, but I'm a very motivated person to keep
+                learning and enjoy overcoming challenges. And like designing and video editing
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
-    <!-- About Me -->
-    <section>
-      <div class="about">
-        <h2>About Me</h2>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis impedit corporis soluta nihil ipsa debitis cumque labore ratione, unde, sed consectetur amet architecto quisquam blanditiis quas, corrupti quidem. Rem,
-          necessitatibus.
-        </p>
-      </div>
-    </section>
-
-    <!-- Experience -->
+    <!-- Work Experience -->
     <section>
       <div class="experience">
-        <table class="center">
+        <h3>Work Experience</h3>
+        <table>
           <tr>
-            <th>Experience</th>
-            <th>Company Name</th>
-            <th>Year</th>
-          </tr>
-          <tr>
-            <td>Fullstack Developer Web</td>
-            <td>SYNRGY Academy</td>
             <td>2022</td>
-          </tr>
-          <tr>
-            <td>Android Developer</td>
-            <td>MojadiApp</td>
-            <td>2022</td>
-          </tr>
-          <tr>
-            <td>Android Engineer</td>
-            <td>Binar Academy</td>
-            <td>2022</td>
-          </tr>
-          <tr>
-            <td>Assistant of Information Safety at Learning Laboratory</td>
-            <td>YUBE</td>
-            <td>2022</td>
+            <th></th>
           </tr>
         </table>
       </div>
